--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/Tony001-HUB/death-valley-with-adaptability/issues"
   },
-  "homepage": "https://github.com/Tony001-HUB/death-valley-with-adaptability#readme"
+  "homepage": "https://github.com/Tony001-HUB/death-valley-with-adaptability#readme",
+  "dependencies": {
+    "gh-pages": "^3.1.0"
+  }
 }
